# pitchflock

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  cmake_uninstall.cmake.in  pitchflock-Bridging-Header.h
docs/: README.md  installation.md
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  harmony__state_8h_source.html  index.html  navtreedata.js  navtreeindex0.js  qdkpdve_8h_source.html  qdkpdve__analysis_8h_source.html  qdkpdve__harmonycrystal_8h_source.html  qdkpdve__naming_8h_source.html  qdkpdve__statemaker_8c.html  qdkpdve__statemaker_8c.js  qdkpdve__statemaker_8c__incl.map  qdkpdve__statemaker_8c__incl.md5  qdkpdve__statemaker_8h_source.html  structdve__value-members.html  structdve__value.html  structdve__value__coll__graph.map  structdve__value__coll__graph.md5  structharmony__state-members.html  structharmony__state.html  structharmony__state.js  structharmonycrystal-members.html  structharmonycrystal.html  structkpdve__value-members.html  structkpdve__value.html  (+4 more)
include/: harmony_state.h  qdkpdve.h  qdkpdve_analysis.h  qdkpdve_harmonycrystal.h  qdkpdve_naming.h  qdkpdve_statemaker.h
src/: qdkpdve.c  qdkpdve_analysis.c  qdkpdve_harmonycrystal.c  qdkpdve_naming.c  qdkpdve_statemaker.c
tests/: test_harmony_state_default.c
(+45 files in other folders)
